Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5710

configure doesn't complain on missing Perl

    XMLWordPrintable

Details

    Description

      When building Qt from source, configure doesn't complain when it can't find Perl (running syncqt manually, on the other hand, fails with a nice error message).

      What happens now when Perl is nowhere to be found are some error messages when compiling qmake, and it's quite hard for newbies (like myself) to understand it's related to missing Perl.

      Attachments

        1. configureapp.cpp
          194 kB
        2. configureapp.h
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            maheikki Markku Tapio Heikkilä (Inactive)
            jonasb Jonas Bengtsson
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes