Perl check for windows configure.

Works for Windows, *nix check is done by bash shell.

Task-number: QTBUG-5710
Merge-request: 1362
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>

(cherry picked from commit b3de52be29a54aa23a446c7689a48f73206a7cbc)

Change-Id: I6c0ee22e354724c08fb4070b370254223fd5a431
Reviewed-on: http://codereview.qt-project.org/4590
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>